# kpis-sensesbit

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  README.mdgit  docker-compose.yml  justfile  pyproject.toml  run.ps1  run_by_tenant.py  stats.py
docs/: ENDPOINTS.md  PGADMIN_IMPORTAR_DUMP.md  VPS_UBUNTU_APACHE.md
src/: main.py
src/app/api/kpi/: __init__.py  customer_success.py  management.py  marketing.py  producto.py  test.py  ventas.py
src/app/api/kpi/producto/: __init__.py  products.py
src/app/core/: auth.py  config.py  database.py  hubspot_client.py  logto_client.py  response_time_monitor.py
src/app/models/: __init__.py  answer.py  file.py  organization.py  question.py  report.py  section.py  session.py  user.py
src/app/repositories/product_repositories/: __init__.py  producto_repository.py
src/app/services/product_services/: __init__.py  producto_service.py
